--- a/FlockNFly.uproject
+++ b/FlockNFly.uproject
@@ -7,7 +7,11 @@
 		{
 			"Name": "FlockNFly",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine",
+				"AIModule"
+			]
 		}
 	],
 	"Plugins": [
